# CMakeList.txt : projet CMake pour Projet INF 443, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

# Ajoutez une source à l'exécutable de ce projet.
add_executable (CMakeTarget "Projet INF 443.cpp" "Projet INF 443.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
